Created level page with @shaimacs (#12)

--- a/quizapp/main_app/templates/category.html
+++ b/quizapp/main_app/templates/category.html
@@ -17,7 +17,7 @@
 {% endfor %} -->
 <form action="" method="POST">
     {% csrf_token %}
-    <button type="submit" name='cat' value="9"><a href="{% url 'test' 9 %}">General Knowledge</a> </button>
+    <button type="submit" name='cat' value="9">General Knowledge </button>
     <button type="submit" name='cat' value="10">Entertainment: Books</button>
 </form>
 
