finished categories and levels pages with @faisalabdulaziz (#15)

--- a/quizapp/main_app/templates/levels.html
+++ b/quizapp/main_app/templates/levels.html
@@ -13,6 +13,7 @@
         </div>
         <div class="menu_item">
           <div class="row">
+            <a href="question/{{id}}/easy">
             <div
               class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
             >
@@ -28,7 +29,9 @@
                 <i class="fas fa-city mr-2"></i> Easy
               </div>
             </div> 
+          </a>
             </div>  <div class="row"> 
+              <a href="question/{{id}}/medium">
             <div
               class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
             >
@@ -44,8 +47,10 @@
                 <i class="fas fa-vials mr-2"></i> Medium
               </div>
             </div>
+          </a>
             </div>
             <div class="row"> 
+              <a href="question/{{id}}/hard" >
             <div
               class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
             >
@@ -61,6 +66,7 @@
                 <i class="fas fa-quote-right mr-2"></i> Hard
               </div>
             </div>
+              </a>
             </div>
           </div>
         </div>
