--- a/quizapp/main_app/static/style3.css
+++ b/quizapp/main_app/static/style3.css
@@ -20,6 +20,8 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgb(204, 204, 204);
+    color: brown;
+
 
 }
 h1{
