--- a/quizapp/main_app/templates/levels.html
+++ b/quizapp/main_app/templates/levels.html
@@ -26,8 +26,9 @@
                 "
                 class="text-center p-5 bg-info text-white"
               >
-                <i class="fas fa-city mr-2"></i> Easy
+              <i class="fas fa-tachometer-alt mr-2"></i>Easy
               </div>
+
             </div> 
           </a>
             </div>  <div class="row"> 
@@ -44,7 +45,7 @@
                 "
                 class="text-center p-5 bg-success text-white"
               >
-                <i class="fas fa-vials mr-2"></i> Medium
+              <i class="fas fa-tachometer-alt mr-2"></i>Medium
               </div>
             </div>
           </a>
@@ -63,7 +64,7 @@
                 "
                 class="text-center p-5 bg-warning text-white"
               >
-                <i class="fas fa-quote-right mr-2"></i> Hard
+              <i class="fas fa-tachometer-alt mr-2"></i>Hard
               </div>
             </div>
               </a>
