--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -1,15 +1,27 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
+
 <head>
     <title>QuizApp</title>
-    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
     <script src="https://kit.fontawesome.com/a215bce284.js"></script>
+
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+
 </head>
+
 <body>
     {% if user.is_authenticated %}
     <span><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a></span>
