--- a/quizapp/main_app/templates/signup.html
+++ b/quizapp/main_app/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Sign up</h2>
-<form method="post">
+<form action="{% url 'signup' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
