--- a/quizapp/main_app/templates/index.html
+++ b/quizapp/main_app/templates/index.html
@@ -12,40 +12,31 @@
             <i class="fas fa-brain mr-2"></i>Take Quiz & Challenge Yourself
           </h2>
         </div>
+        
         <div class="menu_item">
           <div class="row">
-            {% for category in categories %}
-            <div class="col-12 col-sm-4 mb-3 d-flex justify-content-center align-items-center">
-              <a href="{% url 'levels' %}">            
+            
+            {% for category in categories%}
+            <a href="{% url 'levels' category.id %}">
+            <div
+              class="col-12 col-sm-4 mb-3 d-flex justify-content-center align-items-center"
+            >
+            
               <div
                 style="
-                  width: 200px;
-                  height: 150px;
+                  width: 95%;
                   font-weight: 600;
                   border: 1px solid#ddd;
                   border-radius: 10px;
-                  padding: 8px;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;                  
                 "
-                {% if category == 'General Knowledge' %}
-                class="text-center bg-info text-white"
-                {% elif category == 'Entertainment: Books' %}
-                class="text-center bg-success text-white"
-                {% elif category == 'Entertainment: Film' %}
-                class="text-center bg-danger text-white"
-                {% elif category == 'Entertainment: Music' %}
-                class="text-center bg-warning text-white"
-                {% elif category == 'Entertainment: Musicals & Theatres' %}
-                class="text-center bg-dark text-white"               
-                {% endif %}
-               >
-               <span class="cat_card"> {{category}}</span>
+                class="text-center p-5 bg-info text-white"
+              >
+                <i class="fas fa-city mr-2"></i> {{category.name}}
               </div>
             </a>
             </div>
-            {% endfor %}
+            {% endfor%}
+          
 
             <!-- <div
               class="col-12 col-sm-4 mb-3 d-flex justify-content-center align-items-center"
