--- a/quizapp/main_app/templates/welcome.html
+++ b/quizapp/main_app/templates/welcome.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,3 +12,4 @@
     <h2>Hello, WelCome to QuizApp</h2>
 </body>
 </html>
+{% endblock %}
