--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <body>
   <audio id="CorrectAnswer" src="https://www.myinstants.com/instant/correct-answer/embed/"> 
   <audio id="WrongAnswer" src="https://www.myinstants.com/instant/correct-answer/embed/"> 
@@ -83,4 +82,5 @@ else{
 });
   </script>
 </body>
+
 {% endblock %}
