--- a/quizapp/main_app/templates/levels.html
+++ b/quizapp/main_app/templates/levels.html
@@ -29,10 +29,14 @@
               <i class="fas fa-tachometer-alt mr-2"></i>Easy
               </div>
 
+            </div>
+
             </div> 
           </a>
             </div>  <div class="row"> 
+
               <a href="question/{{id}}/medium">
+
             <div
               class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
             >
@@ -67,8 +71,11 @@
               <i class="fas fa-tachometer-alt mr-2"></i>Hard
               </div>
             </div>
+
               </a>
+
             </div>
+
           </div>
         </div>
       </div>
