Add Audio, Fix Api, Desgin for Sign-up & Login with @dhuhaahmad

--- a/quizapp/main_app/static/style.css
+++ b/quizapp/main_app/static/style.css
@@ -19,7 +19,7 @@ body{
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat; 
-    color: brown;
+    /* color: brown; */
   
 
 }
