--- a/quizapp/main_app/static/style3.css
+++ b/quizapp/main_app/static/style3.css
@@ -20,7 +20,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgb(204, 204, 204);
-    color: brown;
+    /* color: brown; */
 
 
 }
