--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <body>
-  <audio id="CorrectAnswer" src="https://www.myinstants.com/instant/correct-answer/embed/"> 
-  <audio id="WrongAnswer" src="https://www.myinstants.com/instant/correct-answer/embed/"> 
-</audio>
+  <audio id="CorrectAnswer" src="https://www.dropbox.com/s/corq44j1xt6wmk3/water.mp3?dl=1"></audio>
+  <audio id="WrongAnswer" src="https://www.dropbox.com/s/xxx4y9wbiabslrq/Tie.mp3?dl=1"></audio>
   <div>
     <div class="container">
       <div class="header text-center mb-5">
@@ -20,6 +20,7 @@
               class="fas font-weight-bold text-danger fa-question mr-3"
               style="font-size: 2rem"
             ></i>
+            <!-- <h1 id ="Timer"></h1> -->
             <h5>{{question}}</h5>
           </div>
         </div>
@@ -59,28 +60,30 @@
   </div>
   <script>
 $('p').click(function (event) {
-// Don't follow the link
+// Don't follow the linkt
 event.preventDefault();
 // Log the clicked element in the console
 console.log(event.target.innerText);
-ans=event.target.innerText
+ans=event.target.innerTex
 if(ans === '{{ correct_answer }}'){
   console.log('TRUE');
-  // Div color > Green 
   event.target.style.backgroundColor = 'Green';
   // document.querySelector("#AnswersDiv").style.backgroundColor = 'Green';
   document.querySelector("#CorrectAnswer").play()
-  // console.log(document.querySelector("#CorrectAnswer").play())
-  
-  
 }
 else{
   console.log('FALSE')
-  // Div color > Red 
   event.target.style.backgroundColor = 'Red';
+  document.querySelector("#WrongAnswer").play()
 }
 });
+// $(function () {
+// 	var liftoffTime = new Date();
+//   liftoffTime = new Date(liftoffTime.getFullYear() + 1, 1 - 1, 26);
+//   $('#Timer').countdown({until: liftoffTime, format: 'MS'});
+// 	$('#year').text(austDay.getFullYear());
+// });
+
   </script>
-</body>
 
 {% endblock %}
