--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="header text-center mb-5">
         <h3 class="p-3 text-center bg-primary text-white">
-          category
+          {{category}}
         </h3>
       </div>
       <div class="row">
