Add design to reset-pass

--- a/quizapp/main_app/templates/password_reset_form.html
+++ b/quizapp/main_app/templates/password_reset_form.html
@@ -1,10 +1,15 @@
+{% extends 'base.html' %}
 {% block content %}
-<h1>Forgottenyourpassword?</h1>
-
-<p>Enter your registered mail address.</p>
 <form action="." method="post">
   {%csrf_token%} 
-  {{form.as_p}}
-  <input type="submit" value="Sende-mail" />
+  <!-- {{form.as_p}}-->
+
+  <div class="main">
+    <p class="sign" align="center">Enter your registered mail address.</p>
+    <p><label for="id_email" ></label>
+    <input type="email"  class="un "name="email" autocomplete="email" maxlength="254" required id="id_email"placeholder="Email">
+  </p>
+    <button type="Submit" align="center" class="submit"value="Sende-mail">Send Email</button>
+  </div>
 </form>
 {% endblock %}
