--- a/quizapp/main_app/static/style4.css
+++ b/quizapp/main_app/static/style4.css
@@ -20,6 +20,10 @@ body {
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
+.marginauto{
+    display: flex;
+    justify-content: center;
+}
 
 .sign {
     padding-top: 40px;
