--- a/quizapp/main_app/templates/signup.html
+++ b/quizapp/main_app/templates/signup.html
@@ -1,36 +1,43 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="{% url 'signup' %}" method="POST">
+<form action="/signup/" method="POST">
     {% csrf_token %}
     <!-- {{ form.as_p }} -->
-    <form>
-        <div class="main1">
-            <form class="form1">
-                <p><label for="id_username"></label> <input class="un " type="text" align="center"
-                        placeholder="Username" name="username" maxlength="150" autofocus required id="id_username">
-                    <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
-                </p>
-                <p><label for="id_email"></label> <input class="email" type="email" name="email" maxlength="254"
-                        id="id_email" placeholder="Email Address:"></p>
-                <p><label for="id_password1" placeholder="Password "></label>
-                    <input class="password" type="password" name="password1" autocomplete="new-password" required
-                        id="id_password1" placeholder="Password">
-                    <span class="helptext">
-                        <ul>
-                            <li>Your password can’t be too similar to your other personal information.</li>
-                            <li>Your password must contain at least 8 characters.</li>
-                            <li>Your password can’t be a commonly used password.</li>
-                            <li>Your password can’t be entirely numeric.</li>
-                        </ul>
-                    </span>
-                </p>
-                <p><label for="id_password2"></label>
-                    <input class="password" type="password" name="password2" autocomplete="new-password" required
-                        id="id_password2" placeholder="Password Confirmation">
-                    <span class="helptext">Enter the same password as before, for verification.</span>
-                </p>
-                <button type ="Submit" align="center" class = "submit" >Sign up</button>
-        </div>
-    </form>
+    <div class="main1">
+    <p><label for="id_username"></label> <input class="un "  type="text" name="username" maxlength="150" autofocus required id="id_username"placeholder="Username"> <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span></p>
+    <p><label for="id_email"></label> <input class="un "type="email" name="email" maxlength="254" id="id_email"placeholder="Email Address"></p>
+    <p><label for="id_password1"></label> <input class="password" type="password" name="password1" autocomplete="new-password" required id="id_password1"placeholder="Password"> <span class="helptext"><ul><li>Your password can’t be too similar to your other personal information.</li><li>Your password must contain at least 8 characters.</li><li>Your password can’t be a commonly used password.</li><li>Your password can’t be entirely numeric.</li></ul></span></p>
+    <p><label for="id_password2"></label> <input class="password"type="password" name="password2" autocomplete="new-password" required id="id_password2"placeholder="Password Confirmation"> <span class="helptext">Enter the same password as before, for verification.</span></p>
+    <button type="Submit" align="center" class="submit">Sign up</button>    
+    </div>
 </form>
+    
 {% endblock %}
+
+
+<!-- <div class="main1">
+            <p><label for="id_username"></label> <input class="un " type="text" align="center"
+                    placeholder="Username" name="username" maxlength="150" autofocus required id="id_username">
+                <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+            </p>
+            <p><label for="id_email"></label> <input class="un " type="email" name="email" maxlength="254"
+                    id="id_email" placeholder="Email Address:"></p>
+            <p><label for="id_password1"></label>
+                <input class="password" type="password" name="password1" autocomplete="new-password" required
+                    id="id_password1" placeholder="Password">
+                <span class="helptext">
+                    <ul>
+                        <li>Your password can’t be too similar to your other personal information.</li>
+                        <li>Your password must contain at least 8 characters.</li>
+                        <li>Your password can’t be a commonly used password.</li>
+                        <li>Your password can’t be entirely numeric.</li>
+                    </ul>
+                </span>
+            </p>
+            <p><label for="id_password2"></label>
+                <input class="password" type="password" name="password2" autocomplete="new-password" required
+                    id="id_password2" placeholder="Password Confirmation">
+                <span class="helptext">Enter the same password as before, for verification.</span>
+            </p>
+            <button type ="Submit" align="center" class = "submit" >Sign up</button>
+    </div> -->
